2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstsegment.c:
	  The glib macro seems to be borked. Use g_slice_copy directly and cast
	  in the hope that this fixes the warning on 64bit.

2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstsegment.c:
	  Document the new function. Use g_slice_dup() (no need for
	  gst_segment_init()).	  

2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	* docs/gst/gstreamer-sections.txt:
	  Move GParamSepc macros to standart section.
  
	* gst/gstbin.c:
	  Dn't document _get_type - its in private section in docs anyway and
	  this doc-blob was incomplete.

	* gst/gstclock.h:
	  Fix wrong symbol names in docs.

	* gst/gstmacros.h:
	  Add once doc sentence.

	* tests/check/gst/.cvsignore:
	  Ignore more.

2008-04-21  Stefan Kost  <ensonic@users.sf.net>

	* docs/gst/Makefile.am:
	  And remove those libs here.

2008-04-21  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/libs/Makefile.am:
	  Fix docs build again by adding libgstnet-0.10.so to SCANOBJ_DEPS.

2008-04-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Olivier Crete <tester at tester dot ca>

	* plugins/elements/gstqueue.c: (gst_queue_handle_src_query):
	Add the min-threshold to the min latency if possible. Fixes #529148.

2008-04-21  Stefan Kost  <ensonic@users.sf.net>

	* docs/gst/gstreamer.types.in:
	  Stupid editor, I removed that line as it should go in yet.

2008-04-21  Stefan Kost  <ensonic@users.sf.net>

	* docs/gst/gstreamer.types.in:
	* docs/libs/gstreamer-libs.types:
	  Remove library types fro core docs and have them in libs docs.
	  Reformat and cleanup. Add comment for miniobject types.

2008-04-20  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gsturi.c: (gst_uri_get_protocol):
	  Fix leak: g_strdown operates on the string in place, while
	  g_ascii_strdown() returns a newly-allocated string.

2008-04-20  Sebastian Dröge  <slomo@circular-chaos.org>

	* tools/gst-inspect.c: (print_uri_handler_info),