@@ -1,5 +1,10 @@
 2008-04-23  Stefan Kost  <ensonic@users.sf.net>
 
+	* gst/gstregistry.c:
+	  Improve the documentation.
+
+2008-04-23  Stefan Kost  <ensonic@users.sf.net>
+
 	* gst/gstsegment.c:
 	  The glib macro seems to be borked. Use g_slice_copy directly and cast
 	  in the hope that this fixes the warning on 64bit.
